--- a/TTwoClassesCRUD/MainWindow.xaml
+++ b/TTwoClassesCRUD/MainWindow.xaml
@@ -9,10 +9,11 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <DataGrid x:Name="PersonenDataGrid" Grid.Row="0" ItemsSource="{Binding Personen}" AlternatingRowBackground="LightGray" AutoGenerateColumns="False" CanUserAddRows="True" CanUserDeleteRows="True">
+        <DataGrid x:Name="PersonenDataGrid" Grid.Row="0" ItemsSource="{Binding Personen}" AlternatingRowBackground="LightGray" AutoGenerateColumns="False" CanUserAddRows="True" CanUserDeleteRows="True" SelectionChanged="PersonenDataGrid_SelectionChanged">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Naam" Binding="{Binding Naam, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
                 <DataGridTextColumn Header="Leeftijd" Binding="{Binding Leeftijd, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
@@ -21,10 +22,33 @@
             </DataGrid.Columns>
         </DataGrid>
 
+       
+
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
             <Button x:Name="AddButton" Content="Toevoegen" Margin="5" Click="AddButton_Click" />
             <Button x:Name="UpdateButton" Content="Bijwerken" Margin="5" Click="UpdateButton_Click" />
             <Button x:Name="DeleteButton" Content="Verwijderen" Margin="5" Click="DeleteButton_Click" />
+        </StackPanel>
+
+
+
+        <StackPanel Grid.Row="3">
+            <!-- Persoon sectie -->
+            <GroupBox Header="Persoon Informatie" DataContext="{Binding Persoon}">
+                <StackPanel>
+                    <TextBox Name="txtNaam" Text="{Binding Naam}"/>
+                    <TextBox Name="txtLeeftijd" Text="{Binding Leeftijd}"/>
+                </StackPanel>
+            </GroupBox>
+
+            <!-- Adres sectie -->
+            <GroupBox Header="Adres Informatie" DataContext="{Binding Adres}">
+                <StackPanel>
+                    <TextBox Name="txtStraat" Text="{Binding Straat}"/>
+                    <TextBox Name="txtStad" Text="{Binding Stad}"/>
+                </StackPanel>
+            </GroupBox>
+
         </StackPanel>
     </Grid>
 </Window>
