--- a/TTwoClassesCRUD/MainWindow.xaml
+++ b/TTwoClassesCRUD/MainWindow.xaml
@@ -13,7 +13,7 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <DataGrid x:Name="PersonenDataGrid" Grid.Row="0" ItemsSource="{Binding Personen}" AlternatingRowBackground="LightGray" AutoGenerateColumns="False" CanUserAddRows="True" CanUserDeleteRows="True" SelectionChanged="PersonenDataGrid_SelectionChanged">
+        <DataGrid x:Name="PersonenDataGrid" IsReadOnly="True" Grid.Row="0" ItemsSource="{Binding Personen}" AlternatingRowBackground="LightGray" AutoGenerateColumns="False" CanUserAddRows="True" CanUserDeleteRows="True" SelectionChanged="PersonenDataGrid_SelectionChanged">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Naam" Binding="{Binding Naam, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
                 <DataGridTextColumn Header="Leeftijd" Binding="{Binding Leeftijd, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
@@ -28,12 +28,12 @@
             <Button x:Name="AddButton" Content="Toevoegen" Margin="5" Click="AddButton_Click" />
             <Button x:Name="UpdateButton" Content="Bijwerken" Margin="5" Click="UpdateButton_Click" />
             <Button x:Name="DeleteButton" Content="Verwijderen" Margin="5" Click="DeleteButton_Click" />
+            <Button x:Name="ClearButton" Content="Clear" Margin="5" Click="ClearButton_Click" />
+
         </StackPanel>
 
-
-
         <StackPanel Grid.Row="3">
-            <!-- Persoon sectie -->
+            <!-- Persoon -->
             <GroupBox Header="Persoon Informatie" DataContext="{Binding Persoon}">
                 <StackPanel>
                     <TextBox Name="txtNaam" Text="{Binding Naam}"/>
@@ -41,7 +41,7 @@
                 </StackPanel>
             </GroupBox>
 
-            <!-- Adres sectie -->
+            <!-- Adres -->
             <GroupBox Header="Adres Informatie" DataContext="{Binding Adres}">
                 <StackPanel>
                     <TextBox Name="txtStraat" Text="{Binding Straat}"/>
